k8s/danbooru-images/danbooru-images.yaml
# Define ingress and nginx server for serving static images files on cdn.donmai.us.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: danbooru-images
  namespace: danbooru
  labels:
    app: danbooru-images
spec:
  replicas: 1
  selector:
    matchLabels:
      app: danbooru-images

  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%

  template:
    metadata:
      labels:
        app: danbooru-images
    spec:
      containers:
      - name: nginx
        # https://hub.docker.com/r/openresty/openresty
        image: openresty/openresty:1.29.2.3-bookworm-fat
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /srv
          name: danbooru-images
          readOnly: true
          mountPropagation: HostToContainer
        - name: danbooru-images-nginx-config
          mountPath: "/usr/local/openresty/nginx/conf/nginx.conf"
          subPath: "nginx.conf"
          readOnly: true

        readinessProbe:
          httpGet:
            path: /images/download-preview.png
            port: 80
            httpHeaders:
            - name: Host
              value: cdn.donmai.us
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 6
          initialDelaySeconds: 2

        lifecycle:
          preStop: { exec: { command: ["sleep", "5"] }}

      volumes:
      - name: danbooru-images-nginx-config
        configMap:
          name: danbooru-images-nginx-config

---

apiVersion: v1
kind: Service
metadata:
  name: danbooru-images
  namespace: danbooru
spec:
  selector:
    app: danbooru-images
  ports:
    - port: 80
