k8s/danbooru-images/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: danbooru-images
  namespace: danbooru
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "raikou1.donmai.us,raikou2.donmai.us,raikou3.donmai.us,raikou4.donmai.us"

spec:
  rules:
    - host: cdn.donmai.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danbooru-images
                port:
                  number: 80

  tls:
    - hosts:
      - cdn.donmai.us
      secretName: donmai-us-tls
